--- a/DAProject_May7th.ipynb
+++ b/DAProject_May7th.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcqlc56iJ+r4k1MxiN47JZ",
+      "authorship_tag": "ABX9TyPKXrTM16LpfInRzqwe5m6j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 8,
       "metadata": {
         "id": "ZlJVv0ujjWMN"
       },
@@ -55,13 +55,13 @@
       "metadata": {
         "id": "3yMpPqthn0vx"
       },
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Adjusting prices for inflation rate\n",
+        "# Adjusting prices for inflation rate\n",
         "\n",
         "I found annual inflation rates from this link:\n",
         "https://www.statista.com/statistics/297779/uae-inflation-rate/\n",
@@ -85,13 +85,13 @@
       "metadata": {
         "id": "uy9L7JTBr48o"
       },
-      "execution_count": 35,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## separate dataset by transaction types \n",
+        "# Separate dataset by transaction types \n",
         "\n",
         "Previously, id and arabic columns were dropped. "
       ],
@@ -109,27 +109,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U-bwjeEYdL5k",
-        "outputId": "b10b3210-8c27-4d11-dee0-71865af29172"
+        "outputId": "e8979f31-5620-46f1-c273-9ccbbe710953"
       },
-      "execution_count": 84,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Index(['trans_group_en', 'procedure_name_en', 'property_type_en',\n",
-              "       'property_sub_type_en', 'property_usage_en', 'reg_type_en',\n",
-              "       'area_name_en', 'building_name_en', 'project_name_en',\n",
+              "Index(['Unnamed: 0_x', 'trans_group_en', 'procedure_name_en',\n",
+              "       'property_type_en', 'property_sub_type_en', 'property_usage_en',\n",
+              "       'reg_type_en', 'area_name_en', 'building_name_en', 'project_name_en',\n",
               "       'master_project_en', 'nearest_landmark_en', 'nearest_metro_en',\n",
               "       'nearest_mall_en', 'rooms_en', 'has_parking', 'procedure_area',\n",
               "       'actual_worth', 'meter_sale_price', 'no_of_parties_role_1',\n",
               "       'no_of_parties_role_2', 'no_of_parties_role_3', 'year', 'month',\n",
-              "       'meter_rent_price', 'instance_date', 'adjMeterPrice'],\n",
+              "       'meter_rent_price', 'instance_date', 'Unnamed: 0_y', 'rate',\n",
+              "       'CPI_Multiplier', 'adjMeterPrice'],\n",
               "      dtype='object')"
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 15
         }
       ]
     },
@@ -137,12 +138,12 @@
       "cell_type": "code",
       "source": [
         "#data = data.iloc[: , 1:]\n",
-        "data = data.drop(columns = ['Unnamed: 0_y', 'CPI_Multiplier', 'rate'], inplace = True)"
+        "data.drop(columns = ['Unnamed: 0_x', 'Unnamed: 0_y', 'CPI_Multiplier', 'rate', 'CPI_Multiplier'], inplace = True)"
       ],
       "metadata": {
         "id": "h70ff4c07Srd"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -186,7 +187,7 @@
       "metadata": {
         "id": "l4x6uDvFTR8e"
       },
-      "execution_count": 97,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1560,11 +1561,70 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In the following section, number of missing values and unique values for each attribute is reported. columns with number of unique values less than 50 are stored in selectedCol. "
+        "# Building Name and Area Name Related Tasks\n",
+        "\n",
+        "Considerin the description of attributes (in the given files), I selected unit related and area related attributes as listed in the next cell.  "
       ],
       "metadata": {
-        "id": "OtZEtzIlGzKR"
+        "id": "ltbgF-QUatNy"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unitRelatedFeatures = ['property_type_en', 'property_sub_type_en', 'property_usage_en', \n",
+        "                       'rooms_en', 'has_parking', 'procedure_area']\n",
+        "areaRelatedFeatures = ['area_name_en', 'nearest_landmark_en', 'nearest_metro_en', 'nearest_mall_en',\n",
+        "                       'building_name_en'] #not very sure by picking building name!"
+      ],
+      "metadata": {
+        "id": "x_giRTQJWgKn"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Since the number of unique building and areas are more that it would be inconvenient to list the variations here. So the requested results are saved in the building_area_variations.csv file."
+      ],
+      "metadata": {
+        "id": "ueIy9Lk6cnCx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'number of unique buildings: {data.building_name_en.nunique()}')\n",
+        "print(f'number of unique areas: {data.area_name_en.nunique()}')"
+      ],
+      "metadata": {
+        "id": "bVqdabINXxWh",
+        "outputId": "d9248a24-27b8-40ff-f74e-a5c801969dbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number of unique buildings: 3362\n",
+            "number of unique areas: 251\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RthQyEl3ccjZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
